@@ -5,7 +5,7 @@
 ## Login   <goctaf@gmail.com>
 ##
 ## Started on  Fri Sep 30 22:17:33 2005 GESTES Cedric
-## Last update Fri Apr 21 04:32:43 2006 GESTES Cedric
+## Last update Sat May 20 10:33:22 2006 GESTES Cedric
 ##
 ##CTAFCONF
 
@@ -20,6 +20,10 @@ var_set param $1
 test x$param = "xsh"  && test -f ~/.ctafconf/perso/user-profile && . ~/.ctafconf/perso/user-profile
 test x$param = "xcsh" && test -f ~/.ctafconf/perso/user-profile.csh && source ~/.ctafconf/perso/user-profile.csh
 
+
+#remove fucking bell
+null_cmd setterm -blength 0
+null_cmd setterm -bfreq 0
 
 ###############################
 ## Environment variables export
@@ -68,7 +72,7 @@ env_set DEBEMAIL "$ctafconf_mail"
 
 
 #option for less
-env_set LESS "-cwx2Mz-3"
+env_set LESS "-Qcwx2Mz-3"
 
 #text editor in console mode (for cvs, svn)
 env_set VISUAL "emacs"
